@@ -19,8 +19,8 @@ from .structures.mc_singleton import MCSingleton
 from .structures.module_data_classes import StateManagerData
 from .structures.regular_expressions import \
     BUSY_REGEX, ATTENTION_REGEX, PAUSED_REGEX, RESUMED_REGEX, CANCEL_REGEX, \
-    START_PRINT_REGEX, PRINT_DONE_REGEX, ERROR_REGEX, FAN_ERROR_REGEX, \
-    ERROR_REASON_REGEX, ATTENTION_REASON_REGEX, FAN_REGEX
+    PRINT_DONE_REGEX, ERROR_REGEX, FAN_ERROR_REGEX, ERROR_REASON_REGEX, \
+    ATTENTION_REASON_REGEX, FAN_REGEX
 from ..config import Config, Settings
 from ..conditions import HW, SERIAL
 
@@ -177,7 +177,6 @@ class StateManager(metaclass=MCSingleton):
             PAUSED_REGEX: lambda sender, match: self.paused(),
             RESUMED_REGEX: lambda sender, match: self.resumed(),
             CANCEL_REGEX: lambda sender, match: self.stopped_or_not_printing(),
-            START_PRINT_REGEX: lambda sender, match: self.printing(),
             PRINT_DONE_REGEX: lambda sender, match: self.finished(),
             ERROR_REGEX: lambda sender, match: self.error_handler(),
             ERROR_REASON_REGEX: self.error_reason_handler,
@@ -574,10 +573,16 @@ class StateManager(metaclass=MCSingleton):
         if self.data.printing_state == State.PRINTING:
             self.data.printing_state = State.FINISHED
 
+    @state_influencer(StateChange(to_states={State.READY: Source.USER}))
+    def ready(self):
+        """If we were idle, sets te base state to BUSY"""
+        if self.data.base_state == State.IDLE:
+            self.data.base_state = State.READY
+
     @state_influencer(StateChange(to_states={State.BUSY: Source.MARLIN}))
     def busy(self):
         """If we were idle, sets te base state to BUSY"""
-        if self.data.base_state == State.IDLE:
+        if self.data.base_state in {State.IDLE, State.READY}:
             self.data.base_state = State.BUSY
 
     # Cannot distinguish pauses from the user and the gcode
@@ -650,18 +655,6 @@ class StateManager(metaclass=MCSingleton):
     def clear_attention(self):
         """Calls the internal method for clearing the attention state"""
         self._clear_attention()
-
-    @state_influencer(
-        StateChange(to_states={State.IDLE: Source.MARLIN},
-                    from_states={
-                        State.FINISHED: Source.USER,
-                        State.STOPPED: Source.USER,
-                    },
-                    ready=True))
-    def printer_ready(self):
-        """Printer has been ready after being stopped or after """
-        if self.data.printing_state in {State.FINISHED, State.STOPPED}:
-            self.data.printing_state = None
 
     @state_influencer(StateChange(to_states={State.ATTENTION: Source.USER}))
     def attention(self):
